--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,9 @@
 services:
-  postgres:
+  postgres-svc:
     image: postgres:14
     container_name: postgres-db
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin@123
